# ptk

./: README.md  license.txt
ExternalSDKs/Box2D/: Box2D.h
ExternalSDKs/OpenAL/: config.h
ExternalSDKs/OpenAL/al/: event.cpp
ExternalSDKs/ft2/Freetype2.xcframework/ios-arm64/Freetype2.framework/Modules/: module.modulemap
HelperSources/: List.cpp
examples/: how to add a new project.txt
examples-android/Simple-Landscape/: settings.gradle
examples-android/Simple-Landscape/app/: build.gradle
examples-android/Simple-Landscape/app/libs/: arbo.sh
examples-android/Simple-Landscape/app/src/main/: AndroidManifest.xml
examples-android/Simple-Landscape/app/src/main/cpp/: CMakeLists.txt  MainController.cpp  android_integration.cpp  game.cpp  game.h
examples-android/Simple-Portrait/: settings.gradle
examples-android/Simple-Portrait/app/: build.gradle
examples-android/Simple-Portrait/app/libs/openal/al/: direct_defs.h
examples-android/Simple-Portrait/app/src/main/: AndroidManifest.xml
examples-android/Simple-Portrait/app/src/main/cpp/: CMakeCache.txt  CMakeLists.txt  MainController.cpp  android_integration.cpp  cmake_install.cmake  game.cpp  game.h
examples-android/TestAndroid/app/libs/openal/al/: error.cpp
examples-android/TestAndroid/app/src/main/cpp/: Makefile
examples-ios/Pong-iPhone/Classes/: Player.cpp  Player.h  Projectile.cpp  ball.cpp  ball.h  game.cpp  game.h
examples-ios/Pong-iPhone/Pong-iPhone.xcodeproj/: project.pbxproj
examples-ios/Pong-iPhone/Pong-iPhone.xcodeproj/project.xcworkspace/xcuserdata/jmapp.xcuserdatad/: UserInterfaceState.xcuserstate
examples-ios/Pong-iPhone/Pong-iPhone.xcodeproj/project.xcworkspace/xcuserdata/julien.xcuserdatad/: UserInterfaceState.xcuserstate
examples-ios/Pong-iPhone/Pong-iPhone.xcodeproj/xcuserdata/jmapp.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
examples-ios/Pong-iPhone/Pong-iPhone.xcodeproj/xcuserdata/jmapp.xcuserdatad/xcschemes/: Pong.xcscheme
examples-ios/Pong-iPhone/assets/sfx/: boing2.caf  fruit.caf  fruit2.caf  lifeup.caf
examples-ios/Simple/: SimpleTest-Info.plist
examples-ios/Simple-Landscape/: SimpleTest-Bridging-Header.h
examples-ios/Simple-Landscape/Classes/: game.cpp  game.h
examples-ios/Simple-Landscape/Classes/System/: MainControler.mm  MainController.h
examples-ios/Simple-Landscape/Freetype2.xcframework/: Info.plist
examples-ios/Simple-Landscape/SimpleTest.xcodeproj/: project.pbxproj
examples-ios/Simple-Landscape/SimpleTest.xcodeproj/project.xcworkspace/xcuserdata/jmapp.xcuserdatad/: UserInterfaceState.xcuserstate
examples-ios/Simple-Landscape/SimpleTest.xcodeproj/xcshareddata/xcschemes/: SimpleTest.xcscheme
examples-ios/Simple-Landscape/assets/sfx/: banana.caf  menu.caf
examples-ios/Simple-Portrait/Classes/: game.cpp  game.h
examples-ios/Simple-Portrait/Classes/System/: MainControler.mm  MainController.h
examples-ios/Simple-Portrait/Classes/System/src/: glfm_apple.m
examples-ios/Simple-Portrait/SimpleTest.xcodeproj/: project.pbxproj
examples-ios/Simple-Portrait/SimpleTest.xcodeproj/project.xcworkspace/xcuserdata/jmapp.xcuserdatad/: UserInterfaceState.xcuserstate
examples-ios/Simple-Portrait/SimpleTest.xcodeproj/project.xcworkspace/xcuserdata/julien.xcuserdatad/: UserInterfaceState.xcuserstate
examples-ios/Simple-Portrait/SimpleTest.xcodeproj/xcshareddata/xcschemes/: PTK.xcscheme
examples-ios/Simple-Portrait/SimpleTest.xcodeproj/xcuserdata/jmapp.xcuserdatad/xcschemes/: xcschememanagement.plist
examples-ios/Simple-Portrait/assets/sfx/: breakjarre.caf  click.caf  explosion.caf
examples-ios/Simple/Classes/: MainControler.mm
examples-ios/Simple/SimpleTest.xcodeproj/: project.pbxproj
examples-ios/Simple/SimpleTest.xcodeproj/xcshareddata/xcschemes/: SimpleTest.xcscheme
examples-ios/Simple/assets/sfx/: grizzly_abeille.caf  jump1.caf
examples/Pong-iPhone/: MainWindow.xib  Todo.txt
examples/Pong-iPhone/Classes/: Game2.cpp  Game2.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  ball.cpp  ball.h  game.cpp  game.h
examples/Pong-iPhone/Classes/System/: MainControler.mm
examples/Pong-iPhone/Pong-iPhone.xcodeproj/: project.pbxproj
examples/Pong-iPhone/assets/sfx/: fruit3.caf  grizzly_cochon.caf
examples/Simple/: GoogleService-Info.plist
examples/Simple-Portrait/: SimpleTest-Info.plist
examples/Simple-Portrait/Classes/: MainControler.mm  game.cpp  game.h
examples/Simple-Portrait/SimpleTest.xcodeproj/: project.pbxproj  sunhp.pbxuser
examples/Simple-Portrait/assets/sfx/: bee1.caf  lost.caf  rebon.caf  rebon2.caf
examples/Simple/AudioSupport/: SoundEngine.h
examples/Simple/Classes/: MainControler.mm  SimpleTest_Prefix.pch  main.m
examples/Simple/SimpleTest.xcodeproj/: project.pbxproj  sunhp.mode1v3
examples/Simple/SimpleTest.xcodeproj/xcshareddata/xcschemes/: Grizzly.xcscheme
examples/Simple/assets/gfx/: 640_480.psd  bigicon.psd  monsters_toppers.psd  sprites.psd
examples/Simple/assets/sfx/: breakjarre2.caf  grizzly_chenille.caf  grizzly_clef.caf  grizzly_fantome.caf
examples/TestAndroid/app/: build.gradle
examples/TestAndroid/app/libs/openal/al/: state.cpp
examples/TestAndroid/app/src/main/: AndroidManifest.xml
examples/TestAndroid/app/src/main/cpp/: CMakeCache.txt  CMakeLists.txt  MainController.cpp  MainController.h  Makefile  android_integration.cpp  game.cpp  game.h  glfm_android.c
examples/TestAndroid/gradle/wrapper/: gradle-wrapper.properties
extras/: NSKeyedUnarchiver+CatchExceptions.h  NSURLConnection+Blocks.h  NSURLConnection+Blocks.m
iPTKSources/: GLTextureHelper.h  GLTextureHelper.mm  KFont.cpp  KFont.h  KGraphic.cpp  KGraphic.h  KInput.cpp  KInput.h  KLogFile.cpp  KLogFile.h  KMiscTools.cpp  KMiscTools.h  KMiscTools.mm  KMusic.cpp  KMusic.h  KPTK.cpp  KPTK.h  KPTK.mm  KShader.cpp  KShader.h  KSound.cpp  KSound.h  KSound.mm  KSpline.cpp  KSpline.h  KWeb.cpp  KWeb.h  KWeb.mm  KWindow.cpp  KWindow.h  KWindow.mm  OpenALManager.cpp  OpenALManager.h
iPTKSources/HelperSources/: List.h  Vector.cpp  Vector.h
misc/: KMusic.h
misc/Old/: KMusic.mm  NSKeyedUnarchiver+CatchExceptions.m  SAMKeychain.h
(+33 files in other folders)
